# rust-todo-app

./: README.md
backend/: .env  .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: app.js  index.html  styles.css
